cmake_minimum_required(VERSION 3.22)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_1 1_two_sum.cpp)
add_executable(leetcode_7 7_reverse_integer.cpp)
add_executable(leetcode_191 191_number_of_1_bits.cc)
add_executable(leetcode_202 202_happy_number.cc)
add_executable(leetcode_205 205_isomorphic_strings.cc)
add_executable(leetcode_219 219_contains_duplicate_2.cc)
add_executable(leetcode_225 225_implement_stack_using_queues.cc)
add_executable(leetcode_228 228_summary_ranges.cc)
add_executable(leetcode_232 232_implement_queue_using_stacks.cc)
add_executable(leetcode_163 163_missing_ranges.cc)
